--- a/css/cartesflash.css
+++ b/css/cartesflash.css
@@ -107,14 +107,36 @@ Taille carte de visite
     justify-content: center;
     align-items: center;
     page-break-inside:avoid;
+    position: relative;
 }
 .recto {
     border: 1pt solid black;
-    border-radius: 5mm;
 }
 .verso {
     border: 1pt solid rgb(208, 208, 208);
-    border-radius: 5mm;
+}
+
+.logoq {
+    position: absolute;
+    top:0;
+    right: 0;
+    font-size: 1.3em;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    border-radius: 0 5mm;
+    padding:3mm;
+    color:white;
+    background-color: rgb(191, 191, 191);
+}
+
+.identifiant {
+    position: absolute;
+    right: 2mm;
+    bottom: 2mm;
+    color: rgb(191, 191, 191);
+    font-weight: bold;
+    transform-origin: top right;
+    transform: rotate(90deg);
 }
 /* Commons
 */
